# recall

./: Cargo.toml  README.md  install.sh  uninstall.sh
.github/workflows/: build.yml  release.yml
scripts/: install-bash.sh  install-fish.sh  install-zsh.sh  uninstall-bash.sh  uninstall-fish.sh  uninstall-zsh.sh
src/: db.rs  main.rs  ui.rs
src/commands/: db.rs  history.rs  install.rs  log.rs  mod.rs
