[package]
name = "agito"
version = "0.1.0"
edition = "2021"
description = "Terminal command logger for Linux systems"
authors = ["sathirak"]
license = "MIT"
repository = "https://github.com/sathirak/agito"
homepage = "https://github.com/sathirak/agito"
readme = "README.md"
keywords = ["cli", "terminal", "logger", "commands"]
categories = ["command-line-utilities"]

[[bin]]
name = "agito"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libsql = "0.6"
tokio = { version = "1.0", features = ["full"] }
