[package]
name = "recall"
version = "0.1.0"
edition = "2021"
description = "Terminal command logger for Linux systems"
authors = ["sathirak"]
license = "MIT"
repository = "https://github.com/sathirak/recall"
homepage = "https://github.com/sathirak/recall"
readme = "README.md"
keywords = ["cli", "terminal", "logger", "commands"]
categories = ["command-line-utilities"]

[[bin]]
name = "recall"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2"
dirs = "5.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libsql = "0.6"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.7", features = ["v4"] }
ratatui = "0.29.0"
crossterm = "0.29.0"
